crates/hir-ty/tests/snapshots/jls_false_flags__blank_static_final_double_assignment_field_init_then_block.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Final.java:
package com.example;

class Final {
    static final int sf;
    static int copy = sf = 1;
    static {
        sf = 2;
    }
}

static {}
  @6:8..6:10 'sf': variable-already-assigned: Variable 'sf' might already have been assigned
