crates/hir-ty/tests/snapshots/jls_false_flags__conditional_null_primitives_box.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    static Boolean f(boolean b) {
        return b ? true : null;
    }
    static Integer g(boolean b) {
        return b ? null : 5;
    }
    static Long h(boolean b) {
        return b ? null : 5L;
    }
}
