crates/hir-ty/tests/snapshots/jls_false_flags__enhanced_for_variable_mutable.snap
---
source: crates/hir-ty/tests/jls_false_flags.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    static class Holder {
        int value;
    }
    void m(List<String> l, List<Holder> h, int[] arr) {
        for (String s : l) {
            s = "x";
        }
        for (int x : arr) {
            x = 5;
        }
        for (Holder holder : h) {
            holder.value = 1;
        }
    }
}
